[metadata]
name = django-3t
description = Django 3T is a Django Template Testing Tool which aims to help developers to write better tests where the Django template engine is involved.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/yurifari/django-3t
project_urls =
  Source = https://github.com/yurifari/django-3t
  Tracker = https://github.com/yurifari/django-3t/issues
license = MIT
license_file = LICENSE
author = Yuri Farina
author_email = me@yurifarina.com
platform = any
keywords = django, template, test, unittest
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8

[options]
packages = find:
zip_safe = false
install_requires = django>=1.11
setup_requires = setuptools_scm

[options.packages.find]
exclude =
  tests
  tests.*

[flake8]
ignore = W504,W601
max_line_length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
multi_line_output = 5
known_first_party = d3t

[tool:pytest]
addopts = --cov=d3t --cov-report=term-missing
python_path = d3t
DJANGO_SETTINGS_MODULE = tests.project.settings

[coverage:run]
omit=tests/*
